[package]
name = "kv-trie-rs"
version = "0.1.1"
authors = ["Sudarsan Reddy <sudar.theone@gmail.com>"]
description = "KV capable prefix trie library based on LOUDS."
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sudarshan-reddy/kv-trie-rs"
homepage = "https://github.com/sudarshan-reddy/kv-trie-rs"
keywords = ["trie", "louds", "succinct"] # up to 5 keywords, each keyword should have <= 20 chars
categories = ["compression", "data-structures"]
edition = "2021"

[dependencies]
louds-rs = "0.4"

[dev-dependencies]
criterion = "0.2"
rand = "0.6"
lazy_static = "1.3"

[[bench]]
name = "bench"
harness = false

[package.metadata.release]
tag-prefix = "v"
disable-publish = true
