[package]
name = "trie-rs"
version = "0.3.0"
authors = ["Sho Nakatani <lay.sakura@gmail.com>", "Shane Celis <shane.celis@gmail.com>"]
description = "Memory efficient trie (prefix tree) and map library based on LOUDS"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/laysakura/trie-rs"
homepage = "https://github.com/laysakura/trie-rs"
keywords = ["trie", "louds", "succinct"] # up to 5 keywords, each keyword should have <= 20 chars
categories = ["compression", "data-structures"]
edition = "2021"

[dependencies]
louds-rs = "0.6"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
criterion = "0.2"
rand = "0.6"
lazy_static = "1.3"
version-sync = "0.9"

[[bench]]
name = "bench"
harness = false

[features]
serde = ["louds-rs/serde", "dep:serde"]